# Preen

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README.zh-CN.md  design.md  pyproject.toml
.github/workflows/: build-app.yml  ci.yml
assets/brand/: README.md
assets/rwkv_world_tokenizer/: SOURCE.md  hf_rwkv_tokenizer.py
docs/: P0-理论指南.md  P1-任务①收尾报告.md  P1-内存排查报告-v2.md  P1-实验报告.md  P1-已知问题.md  P2-CLI收尾报告.md  Phase3-总体Spec.md  RWKV-StateTuner-Roadmap.md  Runner挂载验收.md  WKV7-backward竞态与梯度正确性实验报告.md  decision-fast-wkv7.md  decision-precision.md  g1g-decode-alignment.md  hig-audit-report.md  review-checklist.md  参考仓库实现.md  工程实测数据.md  快速上手.md  转换器零依赖化报告.md
docs/PRD_2026-07-18/: Backlog-签名公证与无终端安装.md  P0-00-v1.1总览-State效果验证闭环.md  P0-01-会话配置与Reasoning格式对齐.md  P0-02-训练配置继承与State元数据契约.md  P0-03-State效果AB对比.md  P0-04-会话重置与跨面板安全确认.md  P0-05-内置NekoQA200示例数据与首次训练.md  P0-06-训练输出路径自动生成.md  P0-07-训练前数据预检整合.md  P0-08-训练结果可解释摘要.md  P1-08-训练记录命名标签与筛选.md  P2-10-工具任务启动反馈与超时收敛.md  P2-11-macOS交互一致性与键盘可达.md
docs/audits/: NekoQA200-1.1.0-1.md  P0-07-data-preflight-threshold-2026-07-18.md
experiments/mixed_precision/: HANDOFF.md  ab_train.py  analyze.py  bf16_patch.py  build_buckets.py  decode_compare.py  dump_w_dist.py  int8_decode4.py  int8_eval.py  int8_eval_verify.py  int8_grad_probe.py  int8_probe.py  int8_resume.py  matrix_analyze.py  matrix_train.py  mem_probe_bf16.py  peak_analyze.py  peak_probe.py  redline_probe.py  report.md  run_all.sh  run_c4g.sh  run_full.py  run_full.sh  run_int8_traincompare.sh  smoke_numeric.py  ten_questions.txt
experiments/p0_translate/: cross_check.py  data_v2.py  exp_a_direction.py  exp_a_direction_result.json  exp_b_repro.py  final_eval.py  p1_eval_compare.py  pyproject.toml  report_examples.py  smoke_test.py  state_tuner.py  train_v3.py  实验报告.md
experiments/p0_translate/tests/: conftest.py  gen_golden.py  test_inference.py  test_train.py
experiments/p0_translate/tests/golden/: conditional.json  translate_test.json
macos/: DEVELOPMENT.md
macos/Preen/: ContentView.swift  PreenApp.swift
macos/Preen.xcodeproj/: project.pbxproj
macos/Preen/AppIcon.icon/: icon.json
macos/Preen/Models/: BackendStatus.swift  BuiltinDataset.swift  ChatSessionConfig.swift  DatasetPreflightCache.swift  GenConfig.swift  ModelConfigProbe.swift  RecentModel.swift  SessionReplacementIntent.swift  StateMetadata.swift  TrainingConfig.swift  TrainingDataPreview.swift  TrainingMetric.swift  TrainingOutputPath.swift  TrainingResultExplanation.swift
macos/Preen/Persistence/: RunRepository.swift  TrainingRun.swift
macos/Preen/Sidecar/: DataInspectionRunner.swift  PythonResolver.swift  RuntimeCheckRunner.swift  ServeClient.swift  ServeEvent.swift  ServeRequest.swift  StateExportRunner.swift  StateInspectionRunner.swift  ToolEvent.swift  ToolJobRunner.swift  TrainEvent.swift  TrainJobRunner.swift
macos/Preen/Stores/: AppState.swift  BackendStore.swift  (+3 more)
macos/PreenTests/: BuiltinDatasetTests.swift  ChatSessionConfigTests.swift  ComparisonProtocolTests.swift  DatasetPreflightCacheTests.swift  ProcessMetricsSamplerTests.swift  RecentModelCatalogTests.swift  RunRepositoryTests.swift  RuntimeCheckTests.swift  SessionReplacementPolicyTests.swift  StateMetadataTests.swift  ToolEventTests.swift  TrainingConfigProjectionTests.swift  TrainingDataPreviewTests.swift  TrainingMetricTests.swift  TrainingOutputPathTests.swift  TrainingResultExplanationTests.swift  TrainingRunLifecycleTests.swift
models/fla-hub-rwkv7-0.1B-g1/: special_tokens_map.json  tokenizer_config.json
scripts/: build_app.py  nekoqa_smoke.sh  scan_cjk_punct.py
src/statetuner/: __init__.py  chat.py  cli.py  console.py  core.py  data.py  events.py  export.py  fast_wkv7.py  importer.py  inference.py  inspection.py  metadata.py  model_converter.py  preview_cache.py  pth_io.py  quantizer.py  runtime.py  serve.py  service.py  templates.py  thinking.py  tool_events.py  train.py
tests/: conftest.py  test_bench_inference.py  test_builtin_nekoqa.py  test_chat.py  test_cli.py  test_console.py  test_eval.py  test_export.py  test_fast_wkv7.py  test_importer.py  test_importer_e2e.py  test_inference.py  test_inference_engine.py  test_inspection.py  test_metadata.py  test_model_converter.py  test_nekoqa.py  test_pth_io.py  test_quantize.py  test_runtime.py  test_serve_e2e.py  test_serve_handlers.py  test_service.py  test_thinking.py  test_train.py
tests/golden/: baseline_no_state.json  nekoqa_baseline.json  nekoqa_generate.json  translate_train.json
tools/: bench_bandwidth.py  bench_inference.py  convert_rwkv7_to_hf.py  fla_cpu_bootstrap.py  gen_convert_fixture.py  mem_probe.py  mem_probe_v2.py  mem_scan_cache.sh  mem_summarize.py
tools/fixtures/: rwkv7_hf_template.json
tools/mem_results/: A.json  B.json  C.json  D.json
tools/mem_v2/: 04b_L128.json  04b_L256.json  04b_L64.json  04b_mixed.json  04b_smoke200_inf.json  15b_L256_c8.json  15b_L256_inf.json  15b_L40_c8.json  15b_L40_inf.json  15b_nekoqa200_c8.json  15b_nekoqa200_inf.json  15b_scan_c4.json  15b_scan_c6.json  15b_scan_c8.json
train_data/NekoQA_10k/: NOTICE.md  nekoqa_smoke_200.json
train_data/translate/: data_100.jsonl  test_10.jsonl
(+48 files in other folders)
