[project]
name = "statetuner"
version = "0.1.0"
description = "RWKV-7 state tuning for Mac — train, export, and preview per-layer init states"
authors = [{ name = "No-22-Github" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.13"
dependencies = [
    "mlx>=0.22",
    "mlx-lm @ git+https://github.com/ml-explore/mlx-lm.git",
    "transformers>=4.46",
    "tokenizers",
    "safetensors",
    "numpy",
    # ml_dtypes 给 numpy 补 bfloat16。用于读/写 RWKV 的 torch .pth(pth_io.py):
    # 转换器读原始权重、导出器写 Runner 可挂载的 state,全程纯 Python,无需 torch。
    "ml_dtypes",
    "typer>=0.12",
    # rich: chat 命令的展示层(console.py)— 标签/面板/markdown/表格渲染。
    # 已通过 typer 传递可用,这里显式声明因为我们直接 import 它(防上游 typer 换实现)。
    "rich>=13",
]

[project.scripts]
statetuner = "statetuner.cli:app"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/statetuner"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "slow: 训练测试,慢(~4min),需 pytest --slow 开启",
]

# ── src layout: 让 `import statetuner` 直接指向 src/statetuner ─────────────
[tool.uv]
package = true

# hatchling 需要 allow-direct-references 才能接受 mlx-lm 的 git 依赖
[tool.hatch.metadata]
allow-direct-references = true
